issue694 - test to see if there is a flash message and allow extra white space on home partial

--- a/app/assets/sass/dri/dri.scss
+++ b/app/assets/sass/dri/dri.scss
@@ -1261,7 +1261,7 @@ h4.suggest a:hover {
 
 /* -----------Home page styling ---------- */
 .dri_welcome_block {
-	margin: 0 0 40px 0;
+	margin: 10px 0 40px 0;
 	padding: 0;
 }
 .dri_welcome_block h1 {
